--- a/src/visibilityorder/BUILD.bazel
+++ b/src/visibilityorder/BUILD.bazel
@@ -6,7 +6,7 @@ go_library(
     importpath = "github.com/dorfire/go-analyzers/src/visibilityorder",
     visibility = ["//visibility:public"],
     deps = [
-        "@com_github_samber_lo//:go_default_library",
-        "@org_golang_x_tools//go/analysis:go_default_library",
+        "@com_github_samber_lo//:lo",
+        "@org_golang_x_tools//go/analysis",
     ],
 )
